WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163851
REGRESSION(
r207669
): Dromaeo/jslib-style-jquery.html regressed >20%
https://bugs.webkit.org/show_bug.cgi?id=163851
Summary
REGRESSION(r207669): Dromaeo/jslib-style-jquery.html regressed >20%
Antti Koivisto
Reported
2016-10-22 10:49:43 PDT
It is.
Attachments
patch
(4.30 KB, patch)
2016-10-22 10:55 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-10-22 10:55:54 PDT
Created
attachment 292500
[details]
patch
WebKit Commit Bot
Comment 2
2016-10-22 14:30:40 PDT
Comment on
attachment 292500
[details]
patch Clearing flags on attachment: 292500 Committed
r207717
: <
http://trac.webkit.org/changeset/207717
>
WebKit Commit Bot
Comment 3
2016-10-22 14:30:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug